# ISAC

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_REVIEW_REPORT.md  CONTROL_PLANE_SPEC.md  DEVELOP.md  DEVELOPMENT_PLAN.md  Dockerfile  HUMANLIKE_RUNTIME.md  LICENSE  MEMORY_DESIGN.md  README.md  ROADMAP.md  ROUTING_AND_AGENT_MESH.md  SPECIFICATION.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CODE_REVIEW_REPORT.md  DEVELOP.md  DEVELOPMENT_PLAN.md  HUMANLIKE_RUNTIME.md  PLUGIN_COMPATIBILITY.md  PROGRESS.md  README.md  REQUIREMENTS.md  ROUTING_AND_AGENT_MESH.md  SPECIFICATION.md  api.md  control_automation.md  deployment.md  plugin_development.md  usage.md
isac/: __init__.py  __main__.py  main.py
isac/agent/: __init__.py  hooks.py  injector.py  loop.py  prompt_builder.py
isac/channel/: __init__.py  base.py  model.py  registry.py
isac/commands/: __init__.py  base.py  registry.py
isac/control/: __init__.py  audit.py  auth.py  defaults.py  mcp_server.py  webhooks.py
isac/core/: __init__.py  constants.py  events.py  exceptions.py  injector.py  policy.py  types.py
isac/gateway/: __init__.py  event_bus.py  lock.py  models.py  session.py  user_mapper.py
isac/gating/: __init__.py  idle_backoff.py  reply_necessity.py  system.py  turn_gates.py  turn_scheduler.py  types.py
isac/locales/: __init__.py  en_US.py  zh_CN.py
isac/memory/: __init__.py  consolidator.py  embedder.py  pipeline.py  reranker.py
plugins/: README.md
scripts/: docker_deploy.sh  export.py  migrate.py
tests/: conftest.py
(+167 files in other folders)
