[project]
name = "isac"
version = "0.1.0"
description = "Intelligent Social AI Companion — 多 Agent AI 社交陪伴 Bot 框架"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.0",
    "json5>=0.9.25",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
# QQ OneBot 适配器 (Day 3-5)
onebot = ["aiocqhttp>=2.3.0"]
# 本地嵌入模型 (Day 19.5)
embed-local = ["fastembed>=0.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isac"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # async-related
    "C90",   # mccabe complexity
]

[tool.ruff.lint.isort]
known-first-party = ["isac"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
packages = ["isac"]
